# CaroGameCpp

./: .gitignore  CMakeLists.txt  Requirements.docx
data/: game_history.txt  players.txt
include/controller/: game_controller.h
include/model/: board.h  bot.h  matches_history.h  player.h  player_manager.h
include/utils/: utils.h
include/view/: console_view.h
src/: main.cpp
src/controller/: game_controller.cpp
src/model/: board.cpp  bot.cpp  matches_history.cpp  player.cpp  player_manager.cpp
src/utils/: utils.cpp
src/view/: console_view.cpp
